Full-screen player/cursor canvas + fix misalignment + unfuck some more

--- a/src/style.scss
+++ b/src/style.scss
@@ -49,7 +49,8 @@ body {
 			position: 0px 0px;
 		}
 		transition: background-position 0.5s;
-		#world {
+		#world,
+		#player {
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -79,20 +80,6 @@ body {
 	width: 100%;
 	height: 100%;
 }
-#player {
-	width: 128px;
-	height: 128px;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	margin :{
-		top: -64px;
-		left: -64px;
-	}
-//	background-color: rgba(255,255,255,0.3);
-//	box-shadow: 0px 3px 6px rgba(0,0,0,0.3);
-}
-
 
 
 
